--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "angular-translate"
   ],
   "dependencies": {
+    "chai": "^1.10.0",
     "gulp-util": "^3.0.2",
     "js-beautify": "^1.5.4",
     "through2": "^0.6.3"
